--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,7 +1,7 @@
 steps:
 # build the binaries
 - name: 'gcr.io/cloud-builders/go'
-  args: ['build', '-o', 'hello', 'src/main.go']
+  args: ['build', '-o', 'hello', 'main.go']
 
 # build the container image, tag it and push it to the Google Container Registry of our project
 - name: 'gcr.io/cloud-builders/docker'
